<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.nao20010128nao.GroovyRoom.MainActivity" android:orientation="vertical">

    <Button
            android:text="@string/new_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/newBtn"/>
    <Button
            android:text="@string/saves"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/saves" />
    <Button
            android:text="@string/logcat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/logcat" />
    <Button
            android:text="@string/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/settings" />
</LinearLayout>
